<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Fragments.OptionsFragment"

    android:id="@+id/options_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"

    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        android:animateLayoutChanges="true"
        android:layout_gravity="center">

        <TextView android:id="@+id/options_title"
            android:text="@string/item_select_title"
            android:textColor="@color/white"
            android:textSize="15sp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <TextView
            android:id="@+id/adv_subtitle"

            android:text="@string/item_select_subtitle"
            android:textColor="@color/nonOpaqueWhite"
            android:textSize="12sp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <LinearLayout android:id="@+id/options_buttons"
            android:layout_width="270dp"
            android:layout_height="27dp"
            android:orientation="horizontal"
            android:background="@drawable/rounded_button"

            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"

            android:animateLayoutChanges="true">

            <Button
                android:id="@+id/left_button"

                android:text="@string/referenciar"
                android:textColor="@color/softWhite"
                android:textSize="12sp"

                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"

                android:background="@color/transparent"
                android:gravity="center"/>

            <LinearLayout
                android:id="@+id/left_separator"

                android:layout_width="1dp"
                android:layout_height="match_parent"

                android:background="@color/softWhite"
                android:orientation="vertical" />

            <Button
                android:id="@+id/center_button"

                android:text="@string/editar"
                android:textColor="@color/softWhite"
                android:textSize="12sp"

                android:layout_width="90dp"
                android:layout_height="match_parent"

                android:background="@color/transparent"
                android:gravity="center" />

            <LinearLayout
                android:id="@+id/rigth_separator"

                android:layout_width="1dp"
                android:layout_height="match_parent"

                android:background="@color/softWhite"
                android:orientation="vertical" />

            <Button
                android:id="@+id/rigth_button"

                android:text="@string/esborra"
                android:textColor="@color/softWhite"
                android:textSize="12sp"

                android:layout_width="90dp"
                android:layout_height="match_parent"

                android:background="@color/transparent"
                android:gravity="center" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>